@@ -23,17 +23,14 @@ package com.realtime.crossfire.jxclient.settings.options;
 import java.util.EventListener;
 
 /**
- * Interface for listeners for checked state changes of {@link
- * CheckBoxOption}s.
+ * Interface for listeners for attribute changes of {@link Option}s.
  *
  * @author Andreas Kirschbaum
  */
-public interface CheckBoxOptionListener extends EventListener
+public interface OptionListener extends EventListener
 {
     /**
      * Will be called when the checked state has changed.
-     *
-     * @param option The option that has changed.
      */
-    void checkedChanged(CheckBoxOption option);
+    void stateChanged();
 }
